--- a/front/staff-portal-front/package.json
+++ b/front/staff-portal-front/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
@@ -14,7 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "pinia": "^2.1.7",
+    "tailwindcss": "^3.4.3",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
