--- a/front/staff-portal-front/tsconfig.node.json
+++ b/front/staff-portal-front/tsconfig.node.json
@@ -5,11 +5,13 @@
     "vitest.config.*",
     "cypress.config.*",
     "nightwatch.conf.*",
-    "playwright.config.*"
+    "playwright.config.*",
+    "./postcss.config.ts"
   ],
+  "exclude": ["node_modules"],
   "compilerOptions": {
     "composite": true,
-    "noEmit": true,
+    "noEmit": false,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 
     "module": "ESNext",
