--- a/front/staff-portal-front/tsconfig.json
+++ b/front/staff-portal-front/tsconfig.json
@@ -1,4 +1,25 @@
 {
+  "compilerOptions": {
+    "baseUrl": "./src", // ベースURLをsrcディレクトリに設定
+    "paths": {
+      "@/*": ["./*"], // @エイリアスをsrcディレクトリにマッピング
+      "@pack/*": ["src/pack/*"]
+    },
+    "target": "esnext",
+    "module": "esnext",
+    "strict": true,
+    "jsx": "preserve",
+    "importHelpers": true,
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "types": ["jest"],
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
+  },
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.d.ts", "src/**/*.vue", "src/*.d.ts"],
+  "exclude": ["node_modules"],
   "files": [],
   "references": [
     {
