ログイン画面実装

--- a/front/staff-portal-front/tsconfig.json
+++ b/front/staff-portal-front/tsconfig.json
@@ -5,6 +5,7 @@
       "@/*": ["./*"], // @エイリアスをsrcディレクトリにマッピング
       "@pack/*": ["src/pack/*"]
     },
+    "allowJs": true,
     "target": "esnext",
     "module": "esnext",
     "strict": true,
